# rust-utils-lib

./: .gitignore  Cargo.toml  Readme.md
assets/mail/: email_ro.html
src/: envars.rs  error.rs  lib.rs  logger.rs  mailer.rs  rsakeys.rs
